--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,10 +1,4 @@
-<html>
-    <head>
-        <title>
-            <%= title %>
-        </title>
-    </head>
-    <body>
-        <h1>Chatting Engine / <%= title %></h1>
-    </body>
-</html>
+<h1>
+    Codeial / <%= title %>
+</h1>
+    
