sign in and sign up

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,7 +3,7 @@
         <title>
             <%= title  %>
         </title>
-        <link rel="stylesheet" href="/Chatting_Engine/assets/css/layout.css">
+        <link rel="stylesheet" href="/css/layout.css">
         <%- style %>
         
     </head>
