--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/Chatting_Engine/assets/css/user_profile.css">
+<link rel="stylesheet" href="/css/user_profile.css">
         <h1>
             Codeial / Profile Page
         </h1>
