--- a/views/_post.ejs
+++ b/views/_post.ejs
@@ -1,34 +1,37 @@
-<li>
+<li id="post-<%= post._id %>">
     <p>
-        <% if(locals.user && locals.user.id == post.user.id){ %>
+        <% if (locals.user && locals.user.id == post.user.id){ %>
         <small>
-            <a href="/posts/destroy/<%= post.id %>">X</a>
+            <a class="delete-post-button"  href="/posts/destroy/<%= post.id %>">X</a>
         </small>
-        <%} %>
+        <% } %>
         <%= post.content %>
-    <br>
-    <small>
-        <%= post.user.name %>
-    </small>
+        <br>
+        <small>
+            <%= post.user.name %>
+        </small>
     </p>
     <div class="post-comments">
-        <% if(locals.user){%>
-            <form action="/comments/create" method="POST">
+        <% if (locals.user){ %>
+            <!-- let's give an id to the new comment form, we'll also need to make the same changes in home_posts.js where we're adding a post to the page -->
+            <form id="post-<%= post._id %>-comments-form" action="/comments/create" method="POST">
                 <input type="text" name="content" placeholder="Type Here to add comment..." required>
-                <input type="hidden" name="post" value="<%= post._id %>">
+                <input type="hidden" name="post" value="<%= post._id %>" >
                 <input type="submit" value="Add Comment">
             </form>
-            <% } %>
 
-            <div class="post-comments-list">
-                <ul id="post-comments-<%= post._id %>">
-                    <% for(comment of post.comments){%>
-                     <%-include('_comment')-%>   
-                       
-                    <% } %>
+        <% } %>
 
-                </ul>
+        <div class="post-comments-list">
+            <ul id="post-comments-<%= post._id %>">
+                <% for (comment of post.comments){%>
 
-            </div>
+                    <%- include('_comment') -%>
+                    
+                
+                <%} %>
+            </ul>
+        </div>
     </div>
+    
 </li>
