--- a/views/home.ejs
+++ b/views/home.ejs
@@ -30,5 +30,8 @@
     
     </section>
 </div>
+
+<!-- importing this script for creating the comments -->
+<script src="/js/home_post_comments.js" ></script>
 <script src="/js/home_posts.js"></script>
 
