files changed and chatting engine implemented

--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -3,7 +3,7 @@
         <div class="mini-logo">
             <p>
                 <a href='/'>
-                    Codeial
+                    codeial
                 </a>
             </p>
         </div>
@@ -30,6 +30,4 @@
         </div>
     </nav>
  
-
-
 </header>
