--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -25,28 +25,30 @@
         <%- include('_footer'); %>
 
         <%- script %>
-        <script>
-           <% if(flash.success && flash.success.length > 0){%>
-                    new Noty({
-                    theme : 'relax',
-                    text: "<%= flash.success %>",
-                    type : 'success',
-                    layout : 'topRight',
-                    timeout : 1500
-                    
-                    }).show();
-            <% } %>
 
-            <% if(flash.error && flash.error.length > 0){%>
-                    new Noty({
-                    theme : 'relax',
+        <script>
+            <% if (flash.success && flash.success.length > 0) {%>
+                new Noty({
+                    theme: 'relax',
                     text: "<%= flash.success %>",
-                    type : 'error',
-                    layout : 'topRight',
-                    timeout : 1500
+                    type: 'success',
+                    layout: 'topRight',
+                    timeout: 1500
                     
-                    }).show();
-            <% } %>
+                }).show();    
+            <%} %>
+
+            <% if (flash.error && flash.error.length > 0) {%>
+                new Noty({
+                    theme: 'relax',
+                    text: "<%= flash.error %>",
+                    type: 'error',
+                    layout: 'topRight',
+                    timeout: 1500
+                    
+                }).show();    
+            <%} %>
         </script>
+        
     </body>
 </html>
